--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,27 @@
     opacity: 0.7;
 }
 
+.reveal section .row {
+    display:flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+    margin-left: -25px;
+}
+
+.reveal section .row > * {
+    display: block;
+    flex: 0 0 250px;
+    margin: 0 0 0 25px;
+}
+
+.reveal section .row img {
+    box-shadow: none;
+    border: none;
+    background-color: transparent;
+}
+
 #tabzilla {
     margin-right: 15px;
 }
